--- a/templates/live.html
+++ b/templates/live.html
@@ -28,7 +28,9 @@
 {% endblock %}
 {% block scripts %}
 {{ super() }}
-
+<script>
+    setInterval( () => window.location.reload(), 1000);
+</script>
 {% endblock %}
 </body>
 </html>
